force-app/main/default/objects/Patient_Tracker_Indicator__mdt/fields/Lookup_field_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Lookup_field_on_Case__c</fullName>
    <description>API Name of the field on the Case object that looks up to this object</description>
    <inlineHelpText>API Name of the field on the Case object that looks up to this object</inlineHelpText>
    <label>Lookup field on Case</label>
    <length>100</length>
    <type>Text</type>
</CustomField>