force-app/main/default/objects/Patient_Tracker_Indicator__mdt/fields/Object_Status_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Status_Field_Name__c</fullName>
    <description>API Name of status field on this object</description>
    <inlineHelpText>API Name of status field on this object</inlineHelpText>
    <label>Object Status Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>