force-app/main/default/objects/Patient_Tracker_Indicator__mdt/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <description>API Name of the Parent Object in the Order: i.e. If this record is Order = 2, then this field would be the API Name of whatever object is in Order = 1</description>
    <inlineHelpText>API Name of the Parent Object in the Order: e.g. If this record is Order = 2, then this field would be the API Name of whatever object is in Order = 1</inlineHelpText>
    <label>Parent Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>